--- a/index.html
+++ b/index.html
@@ -2,91 +2,501 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Agro Mastir - Novo Site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Compra e Venda de Grãos | Feijão, Milho, Soja e Café | Agro Taceli</title>
+  <meta name="description" content="Corretora de grãos em Guaíra-SP especializada na compra e venda de feijão, milho, café e soja. Atendemos produtores, compradores e investidores com transparência, suporte e lucratividade.">
+  <meta name="keywords" content="compra e venda de grãos, corretora de grãos, feijão, milho, café, soja, investimento em grãos, armazenagem, agronegócio, lucros com grãos, Guaíra-SP, corretora agrícola em Guaíra">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Agro Taceli | Corretora de Grãos e Investimento Agrícola em Guaíra-SP">
+  <meta property="og:description" content="Intermediação de grãos com suporte comercial, estrutura de armazenagem e oportunidades para investidores em Guaíra-SP.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.agrotaceli.com.br">
+  <link rel="canonical" href="https://www.agrotaceli.com.br">
+   <link rel="icon" href="https://i.imgur.com/q7HAiYJ.png" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
 
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #007b5e, #004d3f);
-      color: #fff;
-      min-height: 100vh;
+      background-color: #f4f4f4;
+    }
+
+    header {
+      background-color: #275330;
       display: flex;
       align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 40px 20px;
-    }
-
-    .container {
-      max-width: 800px;
-      background-color: rgba(0, 0, 0, 0.3);
-      padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-      color: #f0c040;
-    }
-
-    p {
-      font-size: 1.3rem;
-      margin-bottom: 30px;
-    }
-
-    a.botao {
-      display: inline-block;
-      background-color: #f0c040;
-      color: #000;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 15px 30px;
-      border-radius: 10px;
-      font-size: 1.1rem;
-      transition: background-color 0.3s;
-    }
-
-    a.botao:hover {
-      background-color: #e0ad20;
-    }
-
-    .logo {
-      margin-bottom: 25px;
+      justify-content: space-between;
+      padding: 10px 40px;
+      height: 120px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
     }
 
     .logo img {
-      max-width: 180px;
-      border-radius: 12px;
+      height: 110px;
     }
 
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 30px;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: 500;
+      padding: 8px 16px;
+      border-radius: 6px;
+      transition: all 0.3s ease;
+    }
+
+    nav ul li a:hover {
+      background-color: #3b7a4e;
+      color: #ffcc00;
+    }
+
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .menu-toggle div {
+      width: 25px;
+      height: 3px;
+      background: #fff;
+      margin: 4px 0;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        height: auto;
+        padding: 10px 20px;
       }
 
-      p {
-        font-size: 1.1rem;
+      nav {
+        position: absolute;
+        top: 120px;
+        right: 0;
+        width: 100%;
+        background-color: #275330;
       }
+
+      nav ul {
+        flex-direction: column;
+        align-items: flex-end;
+        padding: 20px 40px;
+        display: none;
+      }
+
+      nav ul.active {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: flex;
+      }
+
+      nav ul li {
+        width: 100%;
+      }
+
+      nav ul li a {
+        display: inline-block;
+        width: auto;
+        padding: 12px 20px;
+        margin-bottom: 8px;
+      }
+    }
+
+    .banner {
+      margin-top: 130px;
+      width: 100%;
+      height: auto;
+    }
+
+    .banner img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .sobre, .atuacao {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 60px 20px;
+    }
+
+    .sobre {
+      background-color: #fff;
+    }
+
+    .atuacao {
+      background-color: #275330;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 1200px;
+      width: 100%;
+      gap: 40px;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .sobre-texto, .atuacao-texto {
+      flex: 1;
+      min-width: 300px;
+    }
+
+    .sobre-texto h2, .atuacao-texto h2 {
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
+
+    .sobre-texto h2 {
+      color: #275330;
+    }
+
+    .atuacao-texto h2 {
+      color: #fff;
+    }
+
+    .sobre-texto p {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #444;
+      margin-bottom: 15px;
+    }
+
+    .atuacao-texto p {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #e4e4e4;
+      margin-bottom: 15px;
+    }
+
+    .imagem {
+      flex: 1;
+      min-width: 300px;
+      text-align: center;
+    }
+
+    .imagem img {
+      width: 100%;
+      max-width: 350px;
+      height: auto;
+      border-radius: 10px;
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+        text-align: left;
+      }
+
+      .imagem {
+        margin-top: 30px;
+      }
+    }
+
+    .faq {
+      background-color: #fff;
+      padding: 60px 20px;
+    }
+
+    .faq-container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .faq-container h2 {
+      font-size: 32px;
+      color: #275330;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .faq-item {
+      margin-bottom: 15px;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    .faq-question {
+      width: 100%;
+      background-color: #275330;
+      color: #fff;
+      font-size: 16px;
+      font-weight: 500;
+      border: none;
+      padding: 15px 20px;
+      text-align: left;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      border-radius: 8px;
+    }
+
+    .faq-question:hover {
+      background-color: #1e4027;
+    }
+
+    .faq-answer {
+      display: none;
+      background-color: #f9f9f9;
+      padding: 15px 20px;
+      color: #444;
+      font-size: 15px;
+      line-height: 1.6;
+      border-left: 4px solid #275330;
+    }
+
+    .faq-item.active .faq-answer {
+      display: block;
+    }
+
+    .rodape {
+      background-color: #275330;
+      color: #fff;
+      padding: 30px 20px;
+      text-align: center;
+      font-size: 15px;
+    }
+
+    .rodape a {
+      color: #fff;
+      text-decoration: underline;
+      margin: 0 5px;
+      transition: color 0.3s;
+    }
+
+    .rodape a:hover {
+      color: #ffcc00;
+    }
+
+    .cookie-banner {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: #464646;
+      color: #fff;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 9999;
+      flex-wrap: wrap;
+    }
+
+    .cookie-banner p {
+      margin: 0;
+      font-size: 14px;
+      flex: 1;
+    }
+
+    .cookie-banner a {
+      color: #fff;
+      text-decoration: underline;
+    }
+
+    .cookie-banner button {
+      background-color: #07995e;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      font-size: 14px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    @media (min-width: 600px) {
+      .cookie-banner button {
+        margin-top: 0;
+      }
+    }
+
+    /* BOTÃO WHATSAPP */
+    .whatsapp-button {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      z-index: 9998;
+      width: 60px;
+      height: 60px;
+      cursor: pointer;
+    }
+
+    .whatsapp-button img {
+      width: 100%;
+      height: auto;
+      border-radius: 50%;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease;
+    }
+
+    .whatsapp-button img:hover {
+      transform: scale(1.1);
     }
   </style>
 </head>
 <body>
-  <div class="container">
+
+  <header>
     <div class="logo">
-      <img src="https://www.agromastir.com.br/logo.png" alt="Logo Agro Mastir" onerror="this.style.display='none'">
+      <img src="https://i.imgur.com/yGiKxEH.png" alt="Logo Agro Taceli">
     </div>
-    <h1>Agro Taceli agora é Agro Mastir</h1>
-    <p>Fazemos parte oficialmente do <strong>Grupo Mastir</strong>, fortalecendo ainda mais nossa atuação no agronegócio brasileiro.</p>
-    <p>Nosso novo site já está no ar com todas as informações:</p>
-    <a class="botao" href="https://www.agromastir.com.br" target="_blank">Acesse www.agromastir.com.br</a>
+    <div class="menu-toggle" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav>
+      <ul id="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#sobre">Empresa</a></li>
+        <li><a href="#atuacao">Atuação</a></li>
+        <li><a href="#">Parceiros</a></li>
+        <li><a href="https://wa.me/5517997818991?text=Iniciar%20Atendimento">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+<section class="banner">
+  <picture>
+    <source media="(max-width: 768px)" srcset="https://i.imgur.com/XmcFRr1.png">
+    <img src="https://i.imgur.com/hityKJz.png" alt="Banner Agro Taceli">
+  </picture>
+</section>
+
+<section class="sobre" id="sobre">
+  <div class="container">
+<div class="sobre-texto">
+  <h2>Agro Taceli</h2>
+  <p>Com sede própria em Guaíra-SP, a Agro Taceli atua como corretora de grãos, especializada na intermediação de compra e venda de produtos agrícolas e insumos.</p>
+  <p>Focada nas negociações de feijão, milho, soja e café, a Agro Taceli se destaca como um elo estratégico entre produtores, compradores e distribuidores, contribuindo para o fortalecimento e dinamismo do mercado agrícola nacional.</p>
+  <p>Profissionais do setor contam com a credibilidade, conhecimento técnico e experiência de mercado que a Agro Taceli oferece, garantindo segurança e eficiência em cada transação.</p>
+</div>
+
+    <div class="imagem">
+      <img src="https://i.imgur.com/MaioC97.png" alt="Sobre a Agro Taceli">
+    </div>
   </div>
+</section>
+
+
+
+<section class="atuacao" id="atuacao">
+  <div class="container">
+    <div class="imagem">
+      <img src="https://i.imgur.com/hXTznBL.png" alt="Atuação Agro Taceli">
+    </div>
+<div class="atuacao-texto">
+  <h2>Atuação</h2>
+  <p>A Agro Taceli atua com forte presença nos estados de São Paulo e Minas Gerais, promovendo conexões comerciais sólidas entre produtores rurais, cooperativas, cerealistas, agroindústrias, moageiros e beneficiadores de grãos.</p>
+  <p>Nosso compromisso vai além da intermediação de grãos: oferecemos assessoria comercial, acompanhamento próximo e suporte em todas as etapas da negociação, assegurando transparência, segurança e bom relacionamento entre as partes envolvidas.</p>
+  <p>A Agro Taceli acredita que cada operação bem conduzida contribui para o fortalecimento das parcerias, tornando-as mais consistentes e duradouras a cada nova safra.</p>
+</div>
+
+  </div>
+</section>
+
+
+
+  
+<section class="sobre" id="investimento">
+  <div class="container">
+    <div class="sobre-texto">
+      <h2>Invista em Grãos com a Agro Taceli</h2>
+      <p>Buscando uma forma segura e rentável de investir no agronegócio? A Agro Taceli, sediada em Guaíra-SP, oferece oportunidades exclusivas para investidores interessados em comprar grãos durante a safra, armazenar com infraestrutura própria e vender na entressafra, aproveitando a valorização natural do mercado.</p>
+      <p>Fazemos toda a corretagem, avaliação de mercado, intermediação com produtores e suporte logístico. Você acompanha cada etapa e maximiza seus lucros com segurança e transparência.</p>
+      <p><strong>Invista no futuro do agronegócio com quem entende do mercado em Guaíra e região.</strong></p>
+    </div>
+    <div class="imagem">
+      <img src="https://i.imgur.com/p6Kn7U2.png" alt="Investimento em Grãos em Guaíra-SP">
+    </div>
+  </div>
+</section>
+
+<section class="faq">
+    <div class="faq-container">
+      <h2>Dúvidas Comuns</h2>
+
+      <div class="faq-item">
+        <button class="faq-question">Como vender meus grãos?</button>
+        <div class="faq-answer">
+          <p>Você pode vender seus grãos entrando em contato conosco via WhatsApp. Nossa equipe irá solicitar informações básicas do produto (tipo, volume, local de origem, qualidade) e a partir disso iniciaremos a intermediação junto aos compradores mais adequados.</p>
+        </div>
+      </div>
+
+      <div class="faq-item">
+        <button class="faq-question">Como trabalhar como corretor da Agro Taceli?</button>
+        <div class="faq-answer">
+          <p>Interessados em atuar como corretores parceiros devem entrar em contato via WhatsApp para se cadastrar. É importante possuir conhecimento no setor agrícola e facilidade de comunicação com produtores e compradores.</p>
+        </div>
+      </div>
+
+      <div class="faq-item">
+        <button class="faq-question">Como avaliar meus grãos?</button>
+        <div class="faq-answer">
+          <p>A avaliação básica dos grãos considera umidade, PH, impurezas, peso e qualidade visual. Para uma avaliação mais precisa, recomendamos análise laboratorial e fotos enviadas para nossa equipe via WhatsApp para triagem inicial.</p>
+        </div>
+      </div>
+
+      <div class="faq-item">
+        <button class="faq-question">Como posso falar com a Agro Taceli?</button>
+        <div class="faq-answer">
+          <p>Todo o nosso atendimento é realizado via WhatsApp. Basta nos chamar pelo número informado no site para tirar dúvidas, realizar negociações ou iniciar seu cadastro como parceiro ou fornecedor.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="rodape">
+    <div class="rodape-container">
+      <p>SAC: (17) 99781-8991</p>
+      <p>E-mail: <a href="mailto:contato@agrotaceli.com.br">contato@agrotaceli.com.br</a></p>
+      <p>Copyright 2025 - Todos os direitos reservados</p>
+      <p>
+      </p>
+    </div>
+  </footer>
+
+  <!-- BOTÃO FLUTUANTE WHATSAPP -->
+  <a href="https://wa.me/5517997818991?text=Iniciar%20Atendimento" target="_blank" class="whatsapp-button">
+    <img src="https://i.imgur.com/wTQgnaR.png" alt="WhatsApp Agro Taceli">
+  </a>
+
+<script>
+function toggleMenu() {
+  const menu = document.getElementById('menu');
+  menu.classList.toggle('active');
+}
+</script>
+
+<script>
+const faqQuestions = document.querySelectorAll('.faq-question');
+
+faqQuestions.forEach(question => {
+  question.addEventListener('click', () => {
+    const faqItem = question.parentElement;
+    faqItem.classList.toggle('active');
+  });
+});
+</script>
 </body>
+
+
 </html>
